--- a/techshopapp/templates/techshopapp/catalog.html
+++ b/techshopapp/templates/techshopapp/catalog.html
@@ -15,7 +15,7 @@
             <h5 class="card-title">{{ item.name }}</h5>
             <p class="card-text">{{ item.description }}</p>
             <span>{{ item.price }}</span>
-            <a href="{% url 'item_info' item.pk %}" class="btn btn-primary">Подробнее</a>
+            <a href="{% url 'techshop:item_info' item.pk %}" class="btn btn-primary">Подробнее</a>
             <a href="#" class="btn btn-primary">Купить</a>
         </div>
     </div>
