--- a/items/templates/items/catalog.html
+++ b/items/templates/items/catalog.html
@@ -1,4 +1,5 @@
 {% extends 'techshopapp/base.html' %}
+{% load static %}
 
 {% block title %}
 {{ title }}
@@ -15,11 +16,25 @@
             <h5 class="card-title">{{ item.name }}</h5>
             <p class="card-text">{{ item.description }}</p>
             <span>{{ item.price }}</span>
-            <a href="{% url 'items:item_info' item.pk %}" class="btn btn-primary">Подробнее</a>
             <a href="#" class="btn btn-primary">Купить</a>
         </div>
     </div>
     {% endfor %}
 </div>
+<nav aria-label="Пример навигации по страницам">
+  <ul class="pagination justify-content-center">
+    <li class="page-item disabled">
+      <a class="page-link">Предыдущая</a>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item"><a class="page-link" href="#">4</a></li>
+      <li class="page-item"><a class="page-link" href="#">5</a></li>
+    <li class="page-item">
+      <a class="page-link" href="#">Следующая</a>
+    </li>
+  </ul>
+</nav>
 
 {% endblock %}
