--- a/techshopapp/templates/techshopapp/base.html
+++ b/techshopapp/templates/techshopapp/base.html
@@ -16,17 +16,18 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="{% url 'techshop:home' %}">The best TechShop</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      <span class="navbar-toggler-icon">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">  </button>
+
+      </span>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'techshop:home' %}">Главная</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'techshop:catalog' %}">Каталог</a>
-        </li>
+<!--        <li class="nav-item">-->
+<!--          <a class="nav-link" href="{% url 'items:catalog' %}">Каталог</a>-->
+<!--        </li>-->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Информация о магазине
@@ -34,24 +35,20 @@
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="{% url 'techshop:about' %}">О нас</a></li>
             <li><a class="dropdown-item" href="{% url 'techshop:contacts' %}">Контакты</a></li>
-<!--            <li><hr class="dropdown-divider"></li>-->
             <li><a class="dropdown-item" href="{% url 'techshop:delivery' %}">Доставка и оплата</a></li>
+            <li><a class="dropdown-item" href="{% url 'admin:index' %}">Админ панель</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Список товаров
+          <a class="nav-link dropdown-toggle" href="{% url 'items:catalog' %}" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Каталог
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Действие</a></li>
-            <li><a class="dropdown-item" href="#">Другое действие</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>
+            {% for category in categories %}
+            <li><a class="dropdown-item" href="#">{{ category }}</a></li>
+            {% endfor %}
           </ul>
         </li>
-<!--        <li class="nav-item">-->
-<!--          <a class="nav-link disabled">Распродажа (в разработке)</a>-->
-<!--        </li>-->
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
@@ -60,8 +57,9 @@
     </div>
    <button type="button" class="btn btn-dark">Зарегистрироваться</button>
 
-  </div>
-</nav>
+</div>
+</div>
+  </nav>
 </header>
 <main>
     {% block content %}
