--- a/techshopapp/templates/techshopapp/catalog.html
+++ b/techshopapp/templates/techshopapp/catalog.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="row">
-    {% for item in items %}
+<!--    {% for item in items %}-->
     <div class="card" style="width: 20rem;">
         <img src="https://kotofoto.ru/product_img/69/488837/488837_smartfon_samsung_galaxy_z_flip3_f711b_128gb_beigem.jpg?v=1630324632"
             class="card-img-top" alt="...">
@@ -15,11 +15,11 @@
             <h5 class="card-title">{{ item.name }}</h5>
             <p class="card-text">{{ item.description }}</p>
             <span>{{ item.price }}</span>
-            <a href="{% url 'techshop:item_info' item.pk %}" class="btn btn-primary">Подробнее</a>
+<!--            <a href="{% url 'items:item_info' item.pk %}" class="btn btn-primary">Подробнее</a>-->
             <a href="#" class="btn btn-primary">Купить</a>
         </div>
     </div>
-    {% endfor %}
+<!--    {% endfor %}-->
 </div>
 
 {% endblock %}
