--- a/techshopapp/templates/techshopapp/base.html
+++ b/techshopapp/templates/techshopapp/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load items_tags %}
 
 <!doctype html>
 <html lang="en">
@@ -7,7 +8,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>{% block title %}{% endblock %}</title>
 </head>
@@ -44,6 +45,7 @@
             Каталог
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            {% tag_categories as categories %}
             {% for category in categories %}
             <li><a class="dropdown-item" href="#">{{ category }}</a></li>
             {% endfor %}
