--- a/techshopapp/templates/techshopapp/base.html
+++ b/techshopapp/templates/techshopapp/base.html
@@ -26,9 +26,7 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'techshop:home' %}">Главная</a>
         </li>
-<!--        <li class="nav-item">-->
-<!--          <a class="nav-link" href="{% url 'items:catalog' %}">Каталог</a>-->
-<!--        </li>-->
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Информация о магазине
@@ -41,13 +39,13 @@
           </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="{% url 'items:catalog' %}" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Каталог
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             {% tag_categories as categories %}
             {% for category in categories %}
-            <li><a class="dropdown-item" href="#">{{ category }}</a></li>
+            <li><a class="dropdown-item" href="{% url 'items:catalog' category.slug %}">{{ category }}</a></li>
             {% endfor %}
           </ul>
         </li>
