--- a/items/templates/items/catalog.html
+++ b/items/templates/items/catalog.html
@@ -42,8 +42,7 @@
 <nav aria-label="Пример навигации по страницам">
   <ul class="pagination justify-content-center">
     <li class="page-item {% if not items.has_previous %} disabled {% endif %}">
-      <a class="page-link" href="{% if items.has_previous %}
-      {% url 'items:catalog' slug_url items.previous_page_number %}
+      <a class="page-link" href="{% if items.has_previous %} ?page={{ items.previous_page_number }}
       {% else %}
       #
       {% endif %}">Предыдущая</a>
@@ -52,14 +51,14 @@
       {% if page >= items.number|add:-2 and page <= items.number|add:2 %}
       <li class="page-item {% if items.number == page %}
             active
-            {%endif%}"><a class="page-link" href="{% url 'items:catalog' slug_url page %}">
+            {%endif%}"><a class="page-link" href="?page={{ page }}">
             {{ page }}</a>
       {%endif%}
         </li>
       {% endfor %}
     <li class="page-item {% if not items.has_next %} disabled {% endif %}">
       <a class="page-link" href="{% if items.has_next %}
-      {% url 'items:catalog' slug_url items.next_page_number %}
+      ?page={{ items.next_page_number }}
       {% else %}
       #
       {% endif %}">Следующая</a>
