--- a/items/templates/items/catalog.html
+++ b/items/templates/items/catalog.html
@@ -1,12 +1,58 @@
 {% extends 'techshopapp/base.html' %}
 {% load static %}
+{% load items_tags %}
 
 {% block title %}
 {{ title }}
 {% endblock %}
 
 {% block content %}
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+    Фильтры
+  </button>
 
+    <form action="{% url 'items:catalog' slug_url %}" method="get" class="dropdown-menu-dark">
+<!--  <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">-->
+      <div class="form-check">
+  <input class="form-check-input" type="checkbox" value="on" id="flexCheckDefault" name="on_sale"
+  {% if request.GET.on_sale == 'on' %} checked
+  {% endif %}>
+  <label class="form-check-label" for="flexCheckDefault">
+    Товары по акции
+  </label>
+      </div>
+      <div><hr class="dropdown-divider"></div>
+      <p>Сортировать</p>
+
+          <div class="form-check">
+  <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault1" value="default"
+  {% if not request.GET.order_by or  request.GET.order_by == 'default'%} checked
+  {% endif %}>
+  <label class="form-check-label" for="flexRadioDefault1">
+    По умолчанию
+  </label>
+      </div>
+          <div class="form-check">
+  <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault2" value="price"
+         {% if request.GET.order_by == 'price' %} checked
+  {% endif %}>
+  <label class="form-check-label" for="flexRadioDefault2">
+    От дешёвых к дорогим
+  </label>
+      </div>
+          <div class="form-check">
+  <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault3" value="-price"
+  {% if request.GET.order_by == '-price' %} checked
+  {% endif %}>
+  <label class="form-check-label" for="flexRadioDefault3">
+    От дорогих к дешёвым
+  </label>
+      </div>
+      <button type="submit" class="btn btn-primary">Применить</button>
+<!--  </ul>-->
+            </form>
+</div>
 <div class="row">
     {% for item in items %}
     <div class="card box" style="width: 20rem;">
@@ -42,7 +88,7 @@
 <nav aria-label="Пример навигации по страницам">
   <ul class="pagination justify-content-center">
     <li class="page-item {% if not items.has_previous %} disabled {% endif %}">
-      <a class="page-link" href="{% if items.has_previous %} ?page={{ items.previous_page_number }}
+      <a class="page-link" href="{% if items.has_previous %} ?{% change_params page=items.previous_page_number %}
       {% else %}
       #
       {% endif %}">Предыдущая</a>
@@ -51,14 +97,14 @@
       {% if page >= items.number|add:-2 and page <= items.number|add:2 %}
       <li class="page-item {% if items.number == page %}
             active
-            {%endif%}"><a class="page-link" href="?page={{ page }}">
+            {%endif%}"><a class="page-link" href="?{% change_params page=page %}">
             {{ page }}</a>
       {%endif%}
         </li>
       {% endfor %}
     <li class="page-item {% if not items.has_next %} disabled {% endif %}">
       <a class="page-link" href="{% if items.has_next %}
-      ?page={{ items.next_page_number }}
+      ?{% change_params page=items.next_page_number %}
       {% else %}
       #
       {% endif %}">Следующая</a>
