--- a/items/templates/items/catalog.html
+++ b/items/templates/items/catalog.html
@@ -12,12 +12,16 @@
     Фильтры
   </button>
 
-    <form action="{% url 'items:catalog' slug_url %}" method="get" class="dropdown-menu-dark">
+    <form action="{% if request.GET.q %} {% url 'items:search' %} {% else %} {% url 'items:catalog' slug_url %} {% endif %}" method="get" class="dropdown-menu-dark">
 <!--  <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">-->
       <div class="form-check">
   <input class="form-check-input" type="checkbox" value="on" id="flexCheckDefault" name="on_sale"
   {% if request.GET.on_sale == 'on' %} checked
   {% endif %}>
+            {% if request.GET.q %}
+          <input type="hidden" name="q" value="{{ request.GET.q }}">
+  {% endif %}>
+
   <label class="form-check-label" for="flexCheckDefault">
     Товары по акции
   </label>
@@ -52,6 +56,7 @@
       <button type="submit" class="btn btn-primary">Применить</button>
 <!--  </ul>-->
             </form>
+
 </div>
 <div class="row">
     {% for item in items %}
