--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,22 @@ body{
 }
 
 * {
+    margin: 0;
+}
+html, body {
+    height: 100%;
+}
+.main {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -142px; /* the bottom margin is the negative value of the footer's height */
+}
+.footer, .push {
+    height: 142px; /* .push must be the same height as .footer */
+}
+
+* {
   box-sizing: border-box;
 }
 
