--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
+{% load static %}
+
 
 {% block title %}
-Request for technical support
+{{ title }}
 {% endblock %}
 
 {% block content %}
-<h2>Leave your request here</h2>
+Здесь будет профиль
+
 {% endblock %}
