--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -7,54 +7,54 @@
 {% endblock %}
 
 {% block content %}
-<!-- Pills navs -->
-<ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
-  <li class="nav-item active" role="presentation">
-    <a class="nav-link" id="tab-login" data-mdb-pill-init href="#pills-login" role="tab"
-      aria-controls="pills-login" aria-selected="true">Login</a>
-  </li>
-  <li class="nav-item" role="presentation">
-    <a class="nav-link" id="tab-register" data-mdb-pill-init href="#pills-register" role="tab"
-      aria-controls="pills-register" aria-selected="false">Register</a>
-  </li>
-</ul>
-<!-- Pills navs -->
-<form>
-  <!-- Email input -->
+<div class="d-flex align-items-center justify-content-center">
+<div class=" col-md-6 bg-white p-4 mb-4 mx-3">
+    <h2 class="text-center mb-4">Авторизация</h2>
+<form action="{% url 'user:login' %}" method="post">
+{% include "includes/notifications.html" %}
+    {% csrf_token %}
   <div data-mdb-input-init class="form-outline mb-4">
-    <input type="email" id="form2Example1" class="form-control" />
-    <label class="form-label" for="form2Example1">Email address</label>
+    <label class="form-label" for="id_username">Введите имя пользователя</label>
+    <input type="text" value="{% if form.username.value %}{{ form.username.value }} {% endif %}" id="id_username" name="username" class="form-control" placeholder="Введите имя пользователя" required />
+
   </div>
 
   <!-- Password input -->
   <div data-mdb-input-init class="form-outline mb-4">
-    <input type="password" id="form2Example2" class="form-control" />
-    <label class="form-label" for="form2Example2">Password</label>
-  </div>
+    <label class="form-label" for="id_password">Введите пароль</label>
+    <input type="password"  value="{{ form.username.password }}" id="id_password" name="password" class="form-control" placeholder="Введите пароль" required/>
 
-  <!-- 2 column grid layout for inline styling -->
-  <div class="row mb-4">
-    <div class="col d-flex justify-content-center">
-      <!-- Checkbox -->
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
-        <label class="form-check-label" for="form2Example31"> Remember me </label>
-      </div>
-    </div>
+  </div>
+<!--<div class="col-md-6 bg-white p-4 mb-4 mx-3">-->
+<!--    <h2 class="text-center mb-4">Авторизация</h2>-->
+<!--<form action="{% url 'user:login' %}" method="post">-->
+<!--    {% csrf_token %}-->
+<!--  <div data-mdb-input-init class="form-outline mb-4">-->
+<!--    <label class="form-label" for="{{ form.username.id_for_label }}">Имя пользователя</label>-->
+<!--    {{ form.username }}-->
+
+<!--  </div>-->
+
+<!--  &lt;!&ndash; Password input &ndash;&gt;-->
+<!--  <div data-mdb-input-init class="form-outline mb-4">-->
+<!--    <label class="form-label" for="{{ form.password.id_for_label }}">Пароль</label>-->
+<!--      {{ form.password }}-->
+<!--</div>-->
+
 
     <div class="col">
       <!-- Simple link -->
-      <a href="#!">Forgot password?</a>
+      <a href="#!">Забыли пароль?</a>
     </div>
-  </div>
+
 
   <!-- Submit button -->
-  <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">Sign in</button>
+  <button  type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">Войти</button>
 
   <!-- Register buttons -->
   <div class="text-center">
-    <p>Not a member? <a href="{% url 'users:registration' %}">Register</a></p>
-    <p>or sign up with:</p>
+    <p>Нет аккаунта? <a href="{% url 'users:registration' %}">Зарегистрируйся</a></p>
+    <p>Или войди с помощью:</p>
 
     <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-link btn-floating mx-1">
 <!--        <i class="bi bi-github"></i>-->
@@ -73,4 +73,6 @@
     </button>
   </div>
 </form>
+</div>
+    </div>
 {% endblock %}
