--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -53,8 +53,8 @@
 
   <!-- Register buttons -->
   <div class="text-center">
-    <p>Нет аккаунта? <a href="{% url 'users:registration' %}">Зарегистрируйся</a></p>
-    <p>Или войди с помощью:</p>
+    <p>Нет аккаунта? <a href="{% url 'users:registration' %}">Зарегистрируйтесь</a></p>
+    <p>Или войдите с помощью:</p>
 
     <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-link btn-floating mx-1">
 <!--        <i class="bi bi-github"></i>-->
