--- a/techshopapp/templates/techshopapp/index.html
+++ b/techshopapp/templates/techshopapp/index.html
@@ -15,23 +15,23 @@
 </ol>
 <div class="carousel-inner">
 <div class="carousel-item">
-<img class="d-block w-100" src="{% static 'images/dyson.jpg' %}" alt="Первый слайд">
+<img class="d-block w-100" height=600px src="{% static 'images/dyson.jpg' %}" alt="Первый слайд">
 </div>
 <div class="carousel-item active">
-<img class="d-block w-100" src="{% static 'images/iphone.png' %}" alt="Второй слайд">
+<img class="d-block w-100" height=600px src="{% static 'images/iphone.png' %}" alt="Второй слайд">
 </div>
 <div class="carousel-item">
-<img class="d-block w-100" src="{% static 'images/samsung_flip.jpg' %}" alt="Третий слайд">
+<img class="d-block w-100" height=600px src="{% static 'images/samsung_flip.jpg' %}" alt="Третий слайд">
 </div>
 </div>
 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-<span class="sr-only">Previous</span>
+<span class="sr-only"></span>
 </a>
 <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-<span class="sr-only">Next</span>
+<span class="sr-only"></span>
 </a>
 </div>
-<h1>{{ content }}</h1>
+<h3>{{ content }}</h3>
 {% endblock %}
