--- a/templates/base.html
+++ b/templates/base.html
@@ -17,10 +17,11 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'techshop:home' %}">The best TechShop</a>
-      <span class="navbar-toggler-icon">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">  </button>
-      </span>
+    <img width=60px src="{% static 'images/icons/techshop_icon.png' %}" alt="">
+    <a class="navbar-brand" href="{% url 'techshop:home' %}">TechShop</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -35,7 +36,6 @@
             <li><a class="dropdown-item" href="{% url 'techshop:about' %}">О нас</a></li>
             <li><a class="dropdown-item" href="{% url 'techshop:contacts' %}">Контакты</a></li>
             <li><a class="dropdown-item" href="{% url 'techshop:delivery' %}">Доставка и оплата</a></li>
-            <li><a class="dropdown-item" href="{% url 'admin:index' %}">Админ панель</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
@@ -53,18 +53,18 @@
 
 
       <form class="d-flex" role="search" method="get" action="{% url 'items:search' %}">
-        <input class="form-control me-2" type="search" name="q" placeholder="Поиск" aria-label="Поиск">
+        <input width=300px class="form-control me-3" type="search" name="q" placeholder="Поиск" aria-label="Поиск">
         <button class="btn btn-outline-success" type="submit">Поиск</button>
       </form>
 
       {% if not user.is_authenticated %}
-   <button type="button" class="btn btn-dark">
-     <a href="{% url 'users:registration' %}">Зарегистрироваться</a>
+   <button type="button" class="btn btn-outline-primary ms-5 btn_login">
+     <a class="link-opacity-10-hover text-decoration-none" href="{% url 'users:registration' %}">Зарегистрироваться</a>
    </button>
       {% endif %}
       {% if not user.is_authenticated %}
-    <button type="button" class="btn btn-dark">
-      <a href="{% url 'users:login' %}">Войти</a>
+    <button type="button" class="btn btn-outline-primary ms-2 btn_login">
+      <a class="text-decoration-none" href="{% url 'users:login' %}">Войти</a>
     </button>
       {% endif %}
       {% if user.is_authenticated %}
@@ -82,10 +82,10 @@
     <li><a class="dropdown-item" href="{% url 'users:logout' %}">Выйти</a></li>
   </ul>
 </div>
+  </div>
       {% endif %}
        </div>
  </div>
-</div>
 </div>
   </nav>
 </header>
@@ -100,54 +100,14 @@
 <footer>
   <!-- Footer -->
 <footer class="text-center text-lg-start bg-body-tertiary text-muted">
-  <!-- Section: Social media -->
-  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
 
-    <!-- Right -->
-  </section>
-  <!-- Section: Social media -->
-
-  <!-- Section: Links  -->
   <section class="">
     <div class="container text-center text-md-start mt-5">
-      <!-- Grid row -->
+
       <div class="row mt-3">
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-          <!-- Content -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>TechShop
-          </h6>
-          <p>
-            Будем рады пожеланиям и предложениям
-          </p>
-        </div>
-        <!-- Grid column -->
 
-        <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            Products
-          </h6>
-          <p>
-            <a href="#!" class="text-reset">TechShop</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset"></a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset"></a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset"></a>
-          </p>
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
+
           <h6 class="text-uppercase fw-bold mb-4">
             Полезные странички
           </h6>
@@ -166,14 +126,32 @@
         <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">Контакты</h6>
-          <p><i class="fas fa-home me-3"></i> Москва, Россия, Адрес</p>
+          <h6 class="text-uppercase fw-bold mb-3">Контакты</h6>
+          <p><i class="fas fa-home"></i> Москва, Россия, Адрес</p>
           <p>
-            <i class="fas fa-envelope me-3"></i>
+            <i class="fas fa-envelope"></i>
             techshop@example.com
           </p>
-          <p><i class="fas fa-phone me-3"></i> + 055588373772</p>
+          <p><i class="fas fa-phone"></i> + 055588373772</p>
+                  <div>
+      <a href="" class=" decoration-none me-4 text-reset">
+        <svg xmlns="http://www.w3.org/2000/svg"  width="25" height="25" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+  <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
+</svg>
+      </a>
+      <a href="" class="decoration-none me-4 text-reset">
+        <svg xmlns="http://www.w3.org/2000/svg"  width="25" height="25" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+  <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
+</svg>
+      </a>
+      <a href=""  class=" decoration-none me-4 text-reset">
+        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-telegram" viewBox="0 0 16 16">
+  <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.287 5.906q-1.168.486-4.666 2.01-.567.225-.595.442c-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294q.39.01.868-.32 3.269-2.206 3.374-2.23c.05-.012.12-.026.166.016s.042.12.037.141c-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8 8 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629q.14.092.27.187c.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.4 1.4 0 0 0-.013-.315.34.34 0 0 0-.114-.217.53.53 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09"/>
+</svg>
+      </a>
+    </div>
         </div>
+
         <!-- Grid column -->
       </div>
       <!-- Grid row -->
@@ -182,26 +160,7 @@
   <!-- Section: Links  -->
 
   <!-- Copyright -->
-    <div>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-google"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-github"></i>
-      </a>
-    </div>
+
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2024 Copyright:
     <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
