--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="d-flex align-items-center justify-content-center">
+<div class="d-flex align-items-center justify-content-center pt-3">
 <div class=" col-md-6 bg-white p-4 mb-4 mx-3">
     <h2 class="text-center mb-4">Авторизация</h2>
 <form action="{% url 'user:login' %}" method="post">
@@ -62,13 +62,13 @@
     </button>
 
     <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-link btn-floating mx-1">
-<!--      <i class="bi bi-github"></i>-->
-        <img  width="50" height="50" class="mx-1" src="{% static 'images/icons/google_icon.jpg' %}" alt="">
-    </button>
+<svg xmlns="http://www.w3.org/2000/svg" width="50" height="35" fill="currentColor" class="bi bi-google" viewBox="0 0 16 16">
+  <path d="M15.545 6.558a9.4 9.4 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.7 7.7 0 0 1 5.352 2.082l-2.284 2.284A4.35 4.35 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.8 4.8 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.7 3.7 0 0 0 1.599-2.431H8v-3.08z"/>
+</svg>    </button>
 
     <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-link btn-floating mx-1">
 <!--      <i class="fab fa-github"></i>-->
-        <img width="50" height="50" class="mx-1" src="{% static 'images/icons/github_icon.png' %}" alt="">
+        <img width="43" height="43" class="mx-1" src="{% static 'images/icons/github_icon.png' %}" alt="">
 
     </button>
   </div>
